# izumi

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  README.md  flake.nix
.github/workflows/: auto-release.yml
izumi/: Cargo.toml
izumi-board/: Cargo.toml
izumi-board/src/: catalog.rs  client.rs  config.rs  main.rs  protocol.rs  registry.rs  serve.rs  state.rs
izumi-config/: Cargo.toml
izumi-config/src/: bridge.rs  lib.rs
izumi-lisp/: Cargo.toml
izumi-lisp/src/: lib.rs
izumi-sources/: Cargo.toml
izumi-sources/src/: aws_health.rs  breathe_conflict.rs  cargo_warnings.rs  cloudflare_deployments.rs  confluence_mentions.rs  datadog_monitors.rs  engenho_nodes.rs  flux_failing.rs  git_branch_pr.rs  github_actions_failing.rs  github_assigned_issues.rs  github_review_requested.rs  google_calendar.rs  google_tasks.rs  grafana_alerts.rs  grafana_incidents.rs  grafana_oncall.rs  jira_assigned.rs  jira_sprint.rs  k8s_unhealthy.rs  kurage_agents.rs  lib.rs  opsgenie_alerts.rs  secret_age.rs  tend_repos.rs  todo_backlog.rs  util.rs
izumi-sources/tests/: sources_matrix.rs
izumi/src/: catalog.rs  engine.rs  env.rs  item.rs  lib.rs  maintain.rs  pace.rs  payload.rs  persist.rs  prewarm.rs  raw.rs  refresh.rs  source.rs  spawn.rs  store.rs  writer.rs
izumi/tests/: golden.rs
izumi/tests/fixtures/: README.md  mado-suggest-v1.snapshot  suggestion.json
nix/: README.md  board-options.nix  render-board.nix
