[package]
name = "izumi-config"
version.workspace = true
description = "shikumi TieredConfig board-config surface for izumi — BoardConfig + SourceEntry + the effective_sources merge + the engine-config bridge"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
izumi = { path = "../izumi", version = "0.1.0" }
shikumi = "0.1"

[dev-dependencies]
serde_yaml = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
