[package]
name = "izumi-sources"
version = "0.1.0"
description = "The generic izumi provider catalog — 25 data-source providers ported from mado's suggestion plane, generic over any izumi Catalog"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
izumi = { path = "../izumi", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
