[package]
name = "izumi"
version = "0.1.0"
description = "Fresh-source board substrate - continuously-refreshing, ranked, cache-fresh, actionable data sources (the generalized mado Ctrl-S suggestion plane)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# `macros` on top of the workspace features: the refresh loop's nudge path is a
# `tokio::select!` (ported verbatim from mado's livestream), which lives behind
# tokio's `macros` feature.
tokio = { workspace = true, features = ["macros"] }
blake3 = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
# samba light core (default-features = false: LeakyBucket + PressureLevel only —
# no NATS, no hyper, no prometheus). Crate-local dep, NOT workspace.
samba = { version = "0.1", default-features = false }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync", "macros", "test-util"] }
tempfile = "3"

[lints]
workspace = true
